# Chip8-Emulator

./: CMakeLists.txt  LICENSE  Readme.md
roms/test/: chip8-test-rom.txt
src/: Chip8.cpp  Chip8.hpp  Chip8Test.cpp  Chip8Test.hpp  Platform.cpp  Platform.hpp  main.cpp  minUnit.hpp
